--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="sv">
     <head>
-        
+        <link rel="stylesheet" href="css/style.css">
     </head>
+    <body>
+        <input type="text" placeholder="Användarnamn...">
+        <input type="password" placeholder="Lösenord...">
+        <label for="roll">Välj roll:</label>
+        <select id="roll" name="roll">
+          <option value="admin">Admin</option>
+          <option value="användare">Användare</option>
+        </select>
+
+    </body>
 </html>
