--- a/index.html
+++ b/index.html
@@ -4,13 +4,8 @@
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
-        <input type="text" placeholder="Användarnamn...">
-        <input type="password" placeholder="Lösenord...">
-        <label for="roll">Välj roll:</label>
-        <select id="roll" name="roll">
-          <option value="admin">Admin</option>
-          <option value="användare">Användare</option>
-        </select>
-
+        <input type="text" placeholder="Username...">
+        <input type="password" placeholder="Password...">
+        <button id="Log-in">Log in</button>
     </body>
 </html>
